--- a/ERP/Core.Erp.Web/Areas/Banco/Views/BancoCuenta/_GridViewPartial_cuentas.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/BancoCuenta/_GridViewPartial_cuentas.cshtml
@@ -83,8 +83,8 @@
         });
 
 
-        settings.Columns.Add("IdBanco", "Código").Width = Unit.Percentage(10);
-        settings.Columns.Add("ba_descripcion", "Descripción").Width = Unit.Percentage(40);
+        settings.Columns.Add("IdBanco", "ID").Width = Unit.Percentage(10);
+        settings.Columns.Add("ba_descripcion", "Descripción").Width = Unit.Percentage(50);
         settings.Columns.Add("ba_Num_Cuenta", "Número de cuenta").Width = Unit.Percentage(20);
         settings.Columns.Add(column =>
         {
