--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/HorarioPlanificacion/_GridViewPartial_horario_planificacion_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/HorarioPlanificacion/_GridViewPartial_horario_planificacion_det.cshtml
@@ -8,7 +8,7 @@
         settings.CallbackRouteValues = new { Controller = "HorarioPlanificacion", Action = "GridViewPartial_horario_planificacion_det", IdPlanificacion=Model.IdPlanificacion  };
         settings.KeyFieldName = "Secuencia";
         settings.Width = Unit.Percentage(100);
-        settings.SettingsEditing.Mode = GridViewEditingMode.Inline;
+        settings.SettingsEditing.Mode = GridViewEditingMode.EditFormAndDisplayRow;
         settings.SettingsEditing.UpdateRowRouteValues = new { Controller = "HorarioPlanificacion", Action = "EditingUpdate", Area = "RRHH" };
         settings.SettingsEditing.DeleteRowRouteValues = new { Controller = "HorarioPlanificacion", Action = "EditingDelete", Area = "RRHH" };
 
@@ -30,43 +30,89 @@
         settings.SettingsAdaptivity.AllowOnlyOneAdaptiveDetailExpanded = false;
         settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 500;
 
-        //Funcion para inicializar fila al presionar nuevo
-        settings.InitNewRow = (s, e) =>
-        {
-            e.NewValues["pe_cedulaRuc"] = "";
-            e.NewValues["pe_nombreCompleto"] = "";
-            e.NewValues["Su_Descripcion"] = "";
-            e.NewValues["di_descripcion"] = "";
-            e.NewValues["ar_descripcion"] = "";
-            e.NewValues["de_descripcion"] = "";
-            e.NewValues["ca_descripcion"] = "";
-            e.NewValues["IdHorario"] = 1;
+        //Configuración para que la grilla no muestre texto completo
+        settings.SettingsBehavior.AllowEllipsisInText = true;
+        settings.SettingsResizing.ColumnResizeMode = ColumnResizeMode.NextColumn;
+        settings.Width = Unit.Percentage(100);
 
-        };
-        settings.Columns.Add("pe_cedulaRuc", "Cédula").Width = Unit.Percentage(5);
-        settings.Columns.Add("pe_nombreCompleto", "Empleado").Width = Unit.Percentage(20);
-        settings.Columns.Add("Su_Descripcion", "Sucursal").Width = Unit.Percentage(15);
-        settings.Columns.Add("di_descripcion", "División").Width = Unit.Percentage(10);
-        settings.Columns.Add("ar_descripcion", "Área").Width = Unit.Percentage(10);
-        settings.Columns.Add("de_descripcion", "Departamento").Width = Unit.Percentage(10);
-        settings.Columns.Add("ca_descripcion", "Cargo").Width = Unit.Percentage(10);
+        settings.Settings.ShowFilterRow = true;
+        settings.Settings.ShowHeaderFilterButton = true;
+        settings.SettingsBehavior.AllowSelectByRowClick = true;
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "pe_cedulaRuc";
+            column.Caption = "Cédula";
+            column.Width = Unit.Percentage(10);
+            column.EditFormSettings.Visible = DefaultBoolean.False;
+
+        });
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "pe_nombreCompleto";
+            column.Caption = "Empleado";
+            column.Width = Unit.Percentage(25);
+            column.EditFormSettings.Visible = DefaultBoolean.False;
+
+        });
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "Su_Descripcion";
+            column.Caption = "Sucursal";
+            column.Width = Unit.Percentage(15);
+            column.EditFormSettings.Visible = DefaultBoolean.False;
+
+        });
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "di_descripcion";
+            column.Caption = "División";
+            column.Width = Unit.Percentage(10);
+            column.EditFormSettings.Visible = DefaultBoolean.False;
+
+        });
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "ar_descripcion";
+            column.Caption = "Área";
+            column.Width = Unit.Percentage(10);
+            column.EditFormSettings.Visible = DefaultBoolean.False;
+
+        });
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "de_descripcion";
+            column.Caption = "Departamento";
+            column.Width = Unit.Percentage(10);
+            column.EditFormSettings.Visible = DefaultBoolean.False;
+
+        });
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "ca_descripcion";
+            column.Caption = "Cargo";
+            column.Width = Unit.Percentage(10);
+            column.EditFormSettings.Visible = DefaultBoolean.False;
+
+        });
         settings.Columns.Add(column =>
         {
             column.FieldName = "fecha";
             column.Caption = "Fecha";
-            column.Width = Unit.Percentage(15);
+            column.Width = Unit.Percentage(10);
             column.PropertiesEdit.DisplayFormatString = "d";
             column.EditorProperties().DateEdit(sp =>
             {
                 column.PropertiesEdit.DisplayFormatString = "d";
                 sp.Width = Unit.Percentage(100);
             });
+            column.EditFormSettings.Visible = DefaultBoolean.False;
+
         });
         settings.Columns.Add(column =>
         {
             column.FieldName = "IdHorario";
             column.Caption = "Horario";
-            column.Width = Unit.Percentage(35);
+            column.Width = Unit.Percentage(20);
             column.EditorProperties().ComboBox(p =>
             {
                 p.Columns.Add("IdHorario", "ID").Width = Unit.Percentage(20);
