--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/HorasExtras/_GridViewPartial_aprobacion_horas_extras.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/HorasExtras/_GridViewPartial_aprobacion_horas_extras.cshtml
@@ -3,7 +3,7 @@
     var grid = Html.DevExpress().GridView(settings =>
     {
         settings.Name = "GridView_horas_extras";
-        settings.CallbackRouteValues = new { Controller = "HorasExtras", Action = "GridViewPartial_horas_extras" };
+        settings.CallbackRouteValues = new { Controller = "HorasExtras", Action = "GridViewPartial_horas_extras", Fecha_ini = ViewBag.fecha_ini, Fecha_fin = ViewBag.fecha_fin };
         settings.KeyFieldName = "IdHorasExtras";
         settings.Width = Unit.Percentage(100);
 
