--- a/ERP/Core.Erp.Web/Areas/Presupuesto/Views/Presupuesto/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Presupuesto/Views/Presupuesto/Nuevo.cshtml
@@ -18,7 +18,7 @@
         $.ajax({
             type: 'POST',
             data: JSON.stringify(datos),
-            url: '@Url.Action("ActualizarVariablesSession", "ActivoFijo", new { Area = "ActivoFijo"})',
+            url: '@Url.Action("ActualizarVariablesSession", "Presupuesto", new { Area = "Presupuesto" })',
             async: false,
             bDeferRender: true,
             bProcessing: true,
