--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/_GridViewPartial_deudas_dc.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/_GridViewPartial_deudas_dc.cshtml
@@ -41,11 +41,11 @@
         settings.InitNewRow = (s, e) =>
         {
             e.NewValues["IdCtaCble"] = null;
+            e.NewValues["IdGrupo"] = null;
             e.NewValues["dc_Valor_debe"] = 0;
             e.NewValues["dc_Valor_haber"] = 0;
             e.NewValues["dc_para_conciliar"] = false;
         };
-
         settings.Columns.Add(column =>
         {
             column.FieldName = "IdCtaCble";
@@ -58,6 +58,23 @@
                 p.ValueField = "IdCtaCble";
                 p.ValueType = typeof(string);
                 p.DataSource = ViewBag.lst_cuentas;
+                p.ClientSideEvents.SelectedIndexChanged = "OnSelectedCtaCbleChanged";
+            });
+        });
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "IdGrupoPresupuesto";
+            column.Caption = "Grupo";
+            column.Width = Unit.Percentage(40);
+            column.EditorProperties().ComboBox(p =>
+            {
+                p.CallbackRouteValues = new { Controller = "Deudas", Action = "CargarGrupo" };
+                p.TextField = "Descripcion";
+                p.ValueField = "IdGrupo";
+                p.ValueType = typeof(int);
+                //p.ClientSideEvents.Init = "function(s,e){s.PerformCallback();}";
+                p.BindList(ViewBag.lst_parroquia);
+                p.ClientSideEvents.BeginCallback = "GrupoComboBox_BeginCallback";
             });
         });
         settings.Columns.Add(column =>
